@@ -1,5 +1,6 @@
 Changelog for getResources.
 
+- [#33] sortbyTVType: Allow numeric and datetime TV sorting via SQL CAST()
 - [#24] Fix typos in list property options
 - [#4] Support multiple sortby fields via JSON object
 - Use get() instead to toArray() if includeContent is false
